(executable
 (public_name hol2dk)
 (name main)
 (libraries str unix lambdapi.lplib lambdapi.common lambdapi.parsing lambdapi.core)
)

(install
 (files theory_hol.dk theory_hol.lp encoding.lp renaming.lp fusion.ml bool.ml equal.ml xnames.ml patch unpatch config Makefile progress README.md BIG_FILES part.mk spec.mk)
 (section share)
 (package hol2dk)
)
